Added base templates for CRUD

--- a/kii/tests/test_base_models/templates/default/test_base_models/titlemodel/detail.html
+++ b/kii/tests/test_base_models/templates/default/test_base_models/titlemodel/detail.html
@@ -1,3 +1,3 @@
-{% extends "base_models/detail.html" %}
+{% extends "base_models/basemixin/detail.html" %}
 
 {% block title %}{{ object.title }} {{ block.super }}{% endblock %}
