Compressor and foundation integration

--- a/kii/app/templates/default/app/base.html
+++ b/kii/app/templates/default/app/base.html
@@ -1,8 +1,15 @@
+{% load compress %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>{% block title %}{{ title }}{% endblock %}</title>
     <meta charset="utf-8" />
+
+    {% compress css %}
+        {% block css %}
+        {% endblock %}
+    {% endcompress %}
 </head>
 
 <body>
