--- a/kii/glue/templates/default/glue/base.html
+++ b/kii/glue/templates/default/glue/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html>{% load i18n %}
     <head>
         <title>Welcome</title>
     </head>
@@ -14,9 +14,22 @@
                 </ul>
                 {% endif %}
             {% endblock %}
-            {% block main_content %}
-            
+            {% block header %}
+                {% if not request.user.is_authenticated %}
+                    <form action="{% url 'kii:user:login' %}" method="POST" id="login" >
+                        {% csrf_token %}
+                        {{ login_form }}
+                        <input type="submit" value="{% trans 'login' %}" />
+                    </form>
+                {% else %}
+                    <ul class="apps">
+                        {% for app in user_apps %}
+                            <li class="{{ app.label }}"><a href="{% url 'kii:'|add:app.label|add:':index' %}">{{ app.verbose_name }}</a></li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
             {% endblock %}
+            {% block main_content %}{% endblock %}
         </div>
     </body>
 </html>
