Added Stream items on stream detail

--- a/kii/stream/templates/default/stream/stream/detail.html
+++ b/kii/stream/templates/default/stream/stream/detail.html
@@ -12,4 +12,14 @@
         </ul>
     </div>
     {% endblock %}
+
+    <div class="stream-items">
+    {% block stream_items %}
+        {% for item in object.children.all %}
+            <article class="stream-item">
+                <h2 class="title">{{ item.title }}</h2>
+            </article>
+        {% endfor %}
+    {% endblock %}
+    </div>
 {% endblock %}
