--- a/kii/app/templates/default/app/app_page.html
+++ b/kii/app/templates/default/app/app_page.html
@@ -1,3 +1,3 @@
-{% extends "app/base.html" %}
+{% extends "glue/base.html" %}
 
 {% block title %}{{ app.verbose_name }}{{ block.super }}{% endblock %}
