--- a/kii/glue/templates/default/glue/base.html
+++ b/kii/glue/templates/default/glue/base.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
-<html>{% load i18n %}
+<html>{% load i18n compress static %}
     <head>
-        <title>Welcome</title>
+        <title>{% block title %}{{ title }}{% endblock %}</title>
+        <meta charset="utf-8" />
+        {% compress css %}
+            {% block css %}
+                <link href="{% static 'glue/scss/app.scss' %}" rel="stylesheet" type="text/x-scss" />
+            
+            {% endblock %}
+        {% endcompress %}
     </head>
     <body> 
         <div class="main-content">
