Fixed test failing due to name of template block

--- a/kii/base_models/templates/default/base_models/basemixin/list.html
+++ b/kii/base_models/templates/default/base_models/basemixin/list.html
@@ -1,6 +1,6 @@
 {% extends "app/app_model_page.html" %}
 
-{% block page_content %}
+{% block main_content %}
     {% for object in object_list %}
         {% include object.list_item_template %}
     {% endfor %}
