Fixed test setup for django-compressor

--- a/kii/glue/templates/default/glue/base.html
+++ b/kii/glue/templates/default/glue/base.html
@@ -5,8 +5,7 @@
         <meta charset="utf-8" />
         {% compress css %}
             {% block css %}
-                <link href="{% static 'glue/scss/app.scss' %}" rel="stylesheet" type="text/x-scss" />
-            
+                <link href="{% static 'default/glue/scss/app.scss' %}" rel="stylesheet" type="text/x-scss" />            
             {% endblock %}
         {% endcompress %}
     </head>
