--- a/kii/base_models/templates/default/base_models/modelform.html
+++ b/kii/base_models/templates/default/base_models/modelform.html
@@ -1,4 +1,4 @@
-<form action="" method="post">{% csrf_token %}
+<form action="" class="{{ form.Meta.model.class_name }}" post">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Create" />
 </form>
