Fixed HTML error on forms

--- a/kii/glue/templates/default/glue/base.html
+++ b/kii/glue/templates/default/glue/base.html
@@ -8,7 +8,7 @@
                 <link href="{% static 'default/glue/scss/app.scss' %}" rel="stylesheet" type="text/x-scss" />            
             {% endblock %}
             {% block head_js %}
-                <script type="text/javascript" src="{% static 'jquery/jquery.js' %}"></script>
+                <script type="text/javascript" src="{% static 'jquery/jquery.min.js' %}"></script>
             {% endblock %}
     </head>
     <body> 
