--- a/kii/base_models/templates/default/base_models/basemixin/create.html
+++ b/kii/base_models/templates/default/base_models/basemixin/create.html
@@ -1,5 +1,5 @@
 {% extends "app/app_model_page.html" %}
 
 {% block main_content %}
-    {% include "base_models/modelform.html" %}
+    {% include form_template %}
 {% endblock %}
