Added live_login to selenium test case

--- a/kii/glue/templates/default/glue/base.html
+++ b/kii/glue/templates/default/glue/base.html
@@ -39,6 +39,8 @@
             {% block main_content %}{% endblock %}
         </div>
         {% block bottom_js %}
+
+        <script type="text/javascript">var kii_root = "{{ kii_root|slice:":-1" }}";</script>
         {% endblock %}
     </body>
 </html>
