--- a/kii/user/templates/registration/login.html
+++ b/kii/user/templates/registration/login.html
@@ -1,9 +1,9 @@
 {% extends "glue/base.html" %}
 {% load i18n %}
 {% block main_content %}
-    <form action="{% url 'kii:user:login' %}" method="POST" id="login" >
+    <form action="{% url 'kii:user:login' %}" class="login" method="POST" id="login" >
         {% csrf_token %}
-        {{ login_form }}
+        {{ form }}
         <input type="submit" value="{% trans 'login' %}" />
     </form>
 {% endblock %}
