--- a/kii/glue/templates/default/glue/base.html
+++ b/kii/glue/templates/default/glue/base.html
@@ -4,7 +4,7 @@
         <title>{% block title %}{{ title }}{% endblock %}</title>
         <meta charset="utf-8" />
         {% block css %}
-            <link href="{% static 'glue/scss/app.scss' %}" rel="stylesheet" type="text/x-scss" />            
+            <link href="{% static 'glue/stylesheets/app.css' %}" rel="stylesheet" type="text/css" />            
         {% endblock %}
         {% block head_js %}
             <script type="text/javascript" src="{% static 'jquery/jquery.min.js' %}"></script>
