--- a/kii/glue/templates/default/glue/base.html
+++ b/kii/glue/templates/default/glue/base.html
@@ -7,7 +7,9 @@
             <link href="{% static 'glue/stylesheets/app.css' %}" rel="stylesheet" type="text/css" />            
         {% endblock %}
         {% block head_js %}
-            <script type="text/javascript" src="{% static 'jquery/jquery.min.js' %}"></script>
+            <script type="text/javascript" src="{% static 'glue/bower_components/foundation/js/vendor/jquery.js' %}"></script>
+            <script type="text/javascript" src="{% static 'glue/bower_components/foundation/js/foundation.min.js' %}"></script>
+            <script type="text/javascript" src="{% static 'glue/bower_components/foundation/js/foundation/foundation.topbar.js' %}"></script>
         {% endblock %}
     </head>
     <body> 
@@ -22,24 +24,13 @@
                 {% endif %}
             {% endblock %}
             {% block header %}
-                {% if not request.user.is_authenticated %}
-                    <form action="{% url 'kii:user:login' %}" method="POST" id="login" >
-                        {% csrf_token %}
-                        {{ login_form }}
-                        <input type="submit" value="{% trans 'login' %}" />
-                    </form>
-                {% else %}
-                    <ul class="apps">
-                        {% for app in user_apps %}
-                            <li class="{{ app.label }}"><a href="{% url 'kii:'|add:app.label|add:':index' %}">{{ app.verbose_name }}</a></li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
+                {% include "glue/main_navigation.html" %}
             {% endblock %}
             {% block main_content %}{% endblock %}
         </div>
         {% block bottom_js %}
 
+        <script type="text/javascript" src="{% static 'glue/js/app.js' %}"></script>
         <script type="text/javascript">var kii_root = "{{ kii_root|slice:":-1" }}";</script>
         {% endblock %}
     </body>
