--- a/kii/glue/templates/default/glue/main_navigation.html
+++ b/kii/glue/templates/default/glue/main_navigation.html
@@ -15,7 +15,7 @@
                     {% else %}
                         <li class="has-dropdown"><a href="#">{% trans 'kii.user.menu' %}</a>
                             <ul class="dropdown">
-                                <li class="logout"><a href="{% url 'kii:user:logout' %}">{% trans 'logout' %}</a></li>
+                                <li class="logout"><a href="{% url 'kii:user:logout' %}"><i class="fi-x"></i>{% trans 'logout' %}</a></li>
                             </ul>
                         </li>
                         <ul class="apps">
