--- a/kii/glue/templates/default/glue/base.html
+++ b/kii/glue/templates/default/glue/base.html
@@ -8,8 +8,10 @@
         {% endblock %}
         {% block head_js %}
             <script type="text/javascript" src="{% static 'glue/bower_components/foundation/js/vendor/jquery.js' %}"></script>
+            <script type="text/javascript" src="{% static 'glue/bower_components/foundation/js/vendor/modernizr.js' %}"></script>
             <script type="text/javascript" src="{% static 'glue/bower_components/foundation/js/foundation.min.js' %}"></script>
             <script type="text/javascript" src="{% static 'glue/bower_components/foundation/js/foundation/foundation.topbar.js' %}"></script>
+            <script type="text/javascript" src="{% static 'glue/bower_components/foundation/js/foundation/foundation.alert.js' %}"></script>
         {% endblock %}
     </head>
     <body> 
@@ -18,7 +20,7 @@
                 {% if messages %}
                 <ul class="messages">
                     {% for message in messages %}
-                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    <li{% if message.tags %} class="alert-box {{ message.tags }}"{% endif %} data-alert>{{ message }}<a href="#" class="close">&times;</a></li>
                     {% endfor %}
                 </ul>
                 {% endif %}
