Fixed error in item template finder

--- a/kii/stream/templates/default/stream/stream/detail.html
+++ b/kii/stream/templates/default/stream/stream/detail.html
@@ -13,6 +13,6 @@
     </div>
     {% endblock %}
 
-    {% include 'stream/streamitem/list.html' with items=object.children.all %}
+    {% include 'stream/streamitem/list.html' with items=items %}
     
 {% endblock %}
