Improved list_item template flexibility

--- a/kii/stream/templates/default/stream/streamitem/list_item.html
+++ b/kii/stream/templates/default/stream/streamitem/list_item.html
@@ -1,5 +1,20 @@
+{% load base_models %}
+
 <article class="{{ item.class_name }}">
     <h2 class="title">{% block title %}{{ item.title }}{% endblock %}</h2>
-
+    <div class="content">{% block content %}{{ item.content }}{% endblock %}</div>
+    {% block status %}
+        {% if item|is_owner:request.user %}
+            <p class="status">{{ item.get_status_display }}</p>
+        {% endif %}
+    {% endblock %}
+    {% block date %}
+        {% with item.created|timesince as created %}
+            <p class="created date">{{ created }}</p>
+            {% if item.last_modified|timesince != created %}
+                <p class="last-modified date">{{ item.last_modified|timesince }}</p>
+            {% endif %}
+        {% endwith %}
+    {% endblock %}
 
 </article>
