--- a/kii/glue/templates/default/glue/main_navigation.html
+++ b/kii/glue/templates/default/glue/main_navigation.html
@@ -11,7 +11,7 @@
             <section class="top-bar-section">
                 <ul class="right">
                     {% if not request.user.is_authenticated %}
-                        <li><a href="{% url 'kii:user:login' %}">{% trans 'login' %}</a></li>
+                        <li><a href="{% url 'kii:user:login' %}" class="login">{% trans 'login' %}</a></li>
                     {% else %}
                         <li class="has-dropdown"><a href="#">{% trans 'kii.user.menu' %}</a>
                             <ul class="dropdown">
