--- a/kii/glue/templates/default/glue/main_navigation.html
+++ b/kii/glue/templates/default/glue/main_navigation.html
@@ -13,7 +13,7 @@
                     {% if not request.user.is_authenticated %}
                         <li><a href="{% url 'kii:user:login' %}" class="login">{% trans 'login' %}</a></li>
                     {% else %}
-                        <li class="has-dropdown"><a href="#">{% trans 'kii.user.menu' %}</a>
+                        <li class="has-dropdown"><a href="#"><i class="fi-torso"></i>{% trans 'kii.user.menu' %}</a>
                             <ul class="dropdown">
                                 <li class="logout"><a href="{% url 'kii:user:logout' %}"><i class="fi-x"></i>{% trans 'logout' %}</a></li>
                             </ul>
