Added update tag view

--- a/kii/classify/templates/default/classify/widget.tags.html
+++ b/kii/classify/templates/default/classify/widget.tags.html
@@ -4,7 +4,7 @@
         <h3><i class="fi-price-tag"></i>{% trans "classify.tags" %}</h3>
         <ul>
             {% for tag in owner.tags.all %}
-                <li class="tag">{{ tag.title }}</li>
+                <li class="tag"><a href="{{ tag.reverse_update }}">{{ tag.title }}</a></li>
             {% endfor %}
         </ul>
     </div>
