Added delete view for stream items

--- a/kii/base_models/templates/default/base_models/basemixin/delete.html
+++ b/kii/base_models/templates/default/base_models/basemixin/delete.html
@@ -1,1 +1,5 @@
 {% extends "app/app_model_page.html" %}
+
+{% block main_content %}
+    {% include "base_models/delete_form.html" %}
+{% endblock %}
