--- a/kii/glue/static/default/glue/scss/app.scss
+++ b/kii/glue/static/default/glue/scss/app.scss
@@ -59,5 +59,10 @@
 // icons
 
 i[class^="fi-"] {
-    margin-right: 0.5rem;
+    margin-right:  0.5rem;
+}
+
+.actions {
+    list-style-type: none;
+    margin-left: 0
 }
