Added apps in menu

--- a/kii/glue/static/default/glue/scss/app.scss
+++ b/kii/glue/static/default/glue/scss/app.scss
@@ -43,7 +43,7 @@
 
 .main-content {
     @include grid-row;
-
+    padding: 0.5rem;
     .stream-items {
         @media #{$medium-up} { 
             @include grid-column(9)
