Added model filtering on stream view

--- a/kii/stream/templates/default/stream/stream/detail.html
+++ b/kii/stream/templates/default/stream/stream/detail.html
@@ -3,6 +3,6 @@
 {% block main_content %}    
     
     {% include "classify/widget.tags.html" %}
-    {% include 'stream/streamitem/list.html' with items=items %}
+    {% include 'stream/streamitem/list.html' %}
     
 {% endblock %}
