--- a/kii/glue/static/default/glue/scss/app.scss
+++ b/kii/glue/static/default/glue/scss/app.scss
@@ -43,8 +43,8 @@
 
 .main-content {
     @include grid-row;
-    padding: 0.5rem;
-    .stream-items {
+    padding: 2rem 0.5rem;
+    .stream {
         @media #{$medium-up} { 
             @include grid-column(9)
         }
@@ -69,4 +69,47 @@ i[class^="fi-"] {
 
 .date {
     @include label;
+}
+
+form {
+    max-width: 30rem;
+    display: block;
+    margin: 0 auto;
+}
+
+// streams 
+
+.stream {
+    > .info {
+        @include panel;
+        .actions, h3 {
+            display: inline-block;
+            margin-bottom: 0;
+        }
+        .actions {
+            float: right;
+        }
+    }
+}
+.stream-select {
+    display: inline-block;
+    width: auto;
+    margin: 0 1rem;
+}
+
+article.stream-item {
+    @include grid-row;
+     
+    border-bottom: 1px solid $gainsboro;
+    padding: 1rem 0;
+    .main {
+        @media #{$medium-up} { 
+            @include grid-column(9, $collapse: true)
+        }
+    }
+    .secondary {
+        @media #{$medium-up} { 
+            @include grid-column(3)
+        }
+    }
 }
