--- a/kii/stream/templates/default/stream/stream/detail.html
+++ b/kii/stream/templates/default/stream/stream/detail.html
@@ -1,8 +1,22 @@
 {% extends 'glue/base.html' %}
-
+{% load i18n %}
 {% block main_content %}    
     
     {% include "classify/widget.tags.html" %}
-    {% include 'stream/streamitem/list.html' %}
+
+    <div class="stream" id="stream-{{ current_stream.pk }}">        
+        {% block stream %}
+            <div class="info">
+                <h3 class="title"><i class="fi-megaphone"></i>{% trans "stream" %}<select class="stream-select">
+                      <option value="{{ current_stream.pk }}"> {{ current_stream.title }} ({% blocktrans with items_count=items.count %}stream.items.count {{ items_count }}{% endblocktrans %})</option>
+                    </select>
+                </h3>
+                <ul class="actions">
+                    <li class="subscribe"><i class="fi-rss"></i>{% trans "subscribe" %}</li>
+                </ul>
+            </div>
+        {% endblock %}
+        {% include 'stream/streamitem/list.html' %}
+    </div>
     
 {% endblock %}
