--- a/kii/stream/templates/default/stream/streamitem/list_item.html
+++ b/kii/stream/templates/default/stream/streamitem/list_item.html
@@ -1,28 +1,36 @@
 {% load base_models i18n %}
 
-<article class="{{ item.class_name }}">
-    <h2 class="title">{% block title %}{{ item.title }}{% endblock %}</h2>
-    {% block info %}
-        <p class="info">
-            {% block status %}<span class="status">{{ item.get_status_display }}</span>{% endblock %}
-            {% block date %}
-                {% with item.created|timesince as created %}
-                    <time class="created date" datetime="{{ item.created|date:'c' }}" pubdate=>{{ created }}</time>
-                    {% if item.last_modified|timesince != created %}
-                        <time class="last-modified date" datetime="{{ item.created|date:'c' }}">{{ item.last_modified|timesince }}</time>
-                    {% endif %}
-                {% endwith %}
-            {% endblock %}
-            {% block owner %}<span class="owner">{{ item.owner.username }}</span>{% endblock %}            
-        </p>
-    {% endblock %}
-    <div class="content">{% block content %}{{ item.content }}{% endblock %}</div>
-    {% block admin %}
-        {% if item.owner == request.user %}
-            <ul class="actions admin">
-                <li class="update"><a href="{{ item.reverse_update }}"><i class="fi-pencil"></i>{% trans "update" %}</a></li>
-                <li class="delete"><a href="{{ item.reverse_delete }}"><i class="fi-trash"></i>{% trans "delete" %}</a></li>
-            </ul>
-        {% endif %}
-    {% endblock %}
+<article class="stream-item {{ item.class_name }}">
+    <div class="main">
+        {% block main %}
+            <h2 class="title">{% block title %}{{ item.title }}{% endblock %}</h2>
+            <div class="content">{% block content %}{{ item.content }}{% endblock %}</div>
+        {% endblock %}        
+    </div>
+    <div class="secondary">
+    {% block secondary %}
+        {% block info %}
+            <p class="info">
+                {% block status %}<span class="status">{{ item.get_status_display }}</span>{% endblock %}
+                {% block date %}
+                    {% with item.created|timesince as created %}
+                        <time class="created date" datetime="{{ item.created|date:'c' }}" pubdate=>{{ created }}</time>
+                        {% if item.last_modified|timesince != created %}
+                            <time class="last-modified date" datetime="{{ item.created|date:'c' }}">{{ item.last_modified|timesince }}</time>
+                        {% endif %}
+                    {% endwith %}
+                {% endblock %}
+                {% block owner %}<span class="owner">{{ item.owner.username }}</span>{% endblock %}            
+            </p>
+        {% endblock %}
+        {% block admin %}
+            {% if item.owner == request.user %}
+                <ul class="actions admin">
+                    <li class="update"><a href="{{ item.reverse_update }}"><i class="fi-pencil"></i>{% trans "update" %}</a></li>
+                    <li class="delete"><a href="{{ item.reverse_delete }}"><i class="fi-trash"></i>{% trans "delete" %}</a></li>
+                </ul>
+            {% endif %}
+        {% endblock %}
+    {% endblock %}        
+    </div>
 </article>
