Fixed topbar and improved CSS

--- a/kii/glue/templates/default/glue/main_navigation.html
+++ b/kii/glue/templates/default/glue/main_navigation.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% block main_navigation %}
-    <div class="sticky fixed">
+    <div class="fixed">
         <nav class="top-bar" data-topbar role="navigation">
             <ul class="title-area">
                 <li class="name">
