templates now uses filtered_fields instead of direct value

--- a/kii/stream/templates/default/stream/streamitem/list_item.html
+++ b/kii/stream/templates/default/stream/streamitem/list_item.html
@@ -4,7 +4,7 @@
     <div class="main">
         {% block main %}
             <h2 class="title">{% block title %}{{ item.filtered_title }}{% endblock %}</h2>
-            <div class="content">{% block content %}{{ item.filtered_content }}{% endblock %}</div>
+            <div class="content">{% block content %}{{ item.filtered_content|safe }}{% endblock %}</div>
         {% endblock %}        
     </div>
     <div class="secondary">
