Refactored stream template

--- a/kii/glue/static/default/glue/scss/app.scss
+++ b/kii/glue/static/default/glue/scss/app.scss
@@ -76,6 +76,8 @@ textarea {
 // streams 
 
 .stream {
+    max-width: 50rem;
+    margin: 0 auto;
     > .info {
         @include panel;
         .actions, h3 {
