--- a/kii/stream/templates/default/stream/streamitem/list_item.html
+++ b/kii/stream/templates/default/stream/streamitem/list_item.html
@@ -4,6 +4,7 @@
     <div class="main">
         {% block main %}
             <h2 class="title">{% block title %}{{ item.filtered_title }}{% endblock %}</h2>
+            <p class="publication">{% blocktrans with date=item.publication_date author=item.owner %}published on {{ date }} by {{ author }}{% endblocktrans %}</p>            
             <div class="content">{% block content %}{{ item.filtered_content|safe }}{% endblock %}</div>
         {% endblock %}        
     </div>
@@ -16,17 +17,9 @@
                         <p class="read"><i class="fi-lock"></i>{{ item.read_permission }}</p>
                     {% endif %}
                 {% endblock %}
-
-                {% block status %}<span class="status">{{ item.get_status_display }}</span>{% endblock %}
-                {% block date %}
-                    {% with item.created|timesince as created %}
-                        <time class="created date" datetime="{{ item.created|date:'c' }}" pubdate=>{{ created }}</time>
-                        {% if item.last_modified|timesince != created %}
-                            <time class="last-modified date" datetime="{{ item.created|date:'c' }}">{{ item.last_modified|timesince }}</time>
-                        {% endif %}
-                    {% endwith %}
-                {% endblock %}
-                {% block owner %}<span class="owner">{{ item.owner.username }}</span>{% endblock %}            
+                {% if item.owner == request.user %}
+                    {% block status %}<span class="status">{{ item.get_status_display }}</span>{% endblock %}
+                {% endif %}    
             </div>
         {% endblock %}
         {% block admin %}
