--- a/kii/glue/static/default/glue/scss/_settings.scss
+++ b/kii/glue/static/default/glue/scss/_settings.scss
@@ -1,7 +1,7 @@
 // Foundation by ZURB
 // foundation.zurb.com
 // Licensed under MIT Open Source
-
+$content-width: 35rem;
 //
 
 // Table of Contents
@@ -1298,9 +1298,9 @@ $row-width: rem-calc(1300);
 
 // $include-html-tabs-classes: $include-html-classes;
 
-// $tabs-navigation-padding: rem-calc(16);
-// $tabs-navigation-bg-color: $silver  ;
-// $tabs-navigation-active-bg-color: $white;
+$tabs-navigation-padding: rem-calc(4);
+// // $tabs-navigation-bg-color: $silver  ;
+// $tabs-navigation-active-bg-color: $steel;
 // $tabs-navigation-hover-bg-color: scale-color($tabs-navigation-bg-color, $lightness: -6%);
 // $tabs-navigation-font-color: $jet;
 // $tabs-navigation-active-font-color: $tabs-navigation-font-color;
