--- a/kii/glue/static/default/glue/scss/_settings.scss
+++ b/kii/glue/static/default/glue/scss/_settings.scss
@@ -1,7 +1,23 @@
 // Foundation by ZURB
 // foundation.zurb.com
 // Licensed under MIT Open Source
-$content-width: 35rem;
+$content-width: 45rem;
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans'), local('OpenSans'), url(Open_Sans.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Merriweather'), url(Merriweather.woff) format('woff');
+}
+
+
+
 //
 
 // Table of Contents
@@ -195,13 +211,13 @@ $row-width: rem-calc(1300);
 // $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
-// $header-font-family: $body-font-family;
-// $header-font-weight: $font-weight-normal;
+$header-font-family: "Open Sans", sans-serif;
+$header-font-weight: "bold";
 // $header-font-style: normal;
 // $header-font-color: $jet;
-// $header-line-height: 1.4;
+$header-line-height: 1;
 // $header-top-margin: .2rem;
-// $header-bottom-margin: .5rem;
+$header-bottom-margin: 1.5rem;
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
@@ -232,9 +248,9 @@ $row-width: rem-calc(1300);
 // $small-font-color: scale-color($header-font-color, $lightness: 35%);
 
 // We use these to style paragraphs
-// $paragraph-font-family: inherit;
+$paragraph-font-family: "Merriweather", serif;
 // $paragraph-font-weight: $font-weight-normal;
-// $paragraph-font-size: 1rem;
+$paragraph-font-size: 1.1rem;
 // $paragraph-line-height: 1.6;
 // $paragraph-margin-bottom: rem-calc(20);
 // $paragraph-aside-font-size: rem-calc(14);
