--- a/kii/stream/templates/default/stream/streamitem/detail.html
+++ b/kii/stream/templates/default/stream/streamitem/detail.html
@@ -7,5 +7,15 @@
     {% endblock %}
     {% with list_item_template=object|list_item_template %}
         {% include list_item_template with item=object %}
+        {% if object.discussion_open %}
+            <form action="{{ item.reverse_comment_create }}" class="{{ form.Meta.model.class_name }} {{ action }}" method="POST">
+                {% csrf_token %}
+                {{ comment_form.as_p }}
+                <input type="submit" value="OK" />
+            </form>
+        {% endif %}
+        {% for comment in item.comments.public.select_related %}
+            HELLO
+        {% endfor %}
     {% endwith %}
 {% endblock %}
