--- a/kii/glue/static/default/glue/scss/app.scss
+++ b/kii/glue/static/default/glue/scss/app.scss
@@ -80,6 +80,9 @@ i[class^="fi-"] {
     @include label;
 }
 
+.button, button, input[type="submit"] {
+    @include button;
+}
 form {
     max-width: 50rem;
     display: block;
@@ -110,12 +113,15 @@ article.stream-item {
             color: #2E3437;
         }
     }
-}
-.content {
-    margin: 2rem 0;
-    h1 {
-        padding-bottom: 1rem;
-        border-bottom: 1px solid $gainsboro;
+    .main {
+
+        .content {
+            margin: 2rem 0;
+            h1 {
+                padding-bottom: 1rem;
+                border-bottom: 1px solid $gainsboro;
+            }
+        }
     }
 }
 
@@ -127,4 +133,46 @@ article.stream-item {
 }
 .tabs > dd {
     border: 3px solid $silver;
+}
+
+// comments 
+
+#comments {
+    list-style-type: none;
+    margin-left: 0;
+}
+.comment {
+    padding: 1rem;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+    margin-bottom: 2rem;
+    .author {
+        font-weight: bold;
+    }
+    .content {
+        h1 {
+            font-size: 2.2rem;
+        }
+        h2 {
+            font-size: 1.9rem;
+        }
+        h3 {
+            font-size: 1.7rem;
+        }
+        h4 {
+            font-size: 1.5rem;
+        }
+        h5 {
+            font-size: 1.3rem;
+        }
+        h6 {
+            font-size: 1.1rem;
+        }
+        h1, h2, h3, h4, h5, h6 {
+            color: #666;
+        }
+        p:last-child {
+            margin-bottom: 0;
+        }
+
+    }
 }
