--- a/kii/stream/templates/default/stream/streamitem/list_item.html
+++ b/kii/stream/templates/default/stream/streamitem/list_item.html
@@ -27,5 +27,30 @@
             {% endblock %}
         </div>
         {% endif %} 
-    {% endblock %}        
+    {% endblock %}  
+
+    {% block comments %}
+    
+        {% if action == "detail" %}
+            <h3>{% trans "comments" %}</h3>
+            <ul id="comments">
+                {% for comment in item.comments.public %}
+                    <li class="comment" id="comment-{{ comment.pk }}">
+                        <p class="author">{% if comment.profile.url %}
+                            <a href="comment.profile.url">{{ comment.profile.username }}</a>
+                        {% else %}{{ comment.profile.username }}{% endif %} - <span class="created date" title="{{ comment.created }}">{% blocktrans with timesince=comment.created|timesince %}{{ timesince }} ago {% endblocktrans %}</span></p>
+                        <div class="content">{{ comment.content.rendered }}</div>
+                    </li>
+                {% endfor %}
+            </ul>
+            {% if item.discussion_open %}
+                <p>{% trans "comment.publish" %}</h3>
+                <form action="{{ item.reverse_comment_create }}" class="{{ form.Meta.model.class_name }} {{ action }}" method="POST">
+                    {% csrf_token %}
+                    {{ comment_form.as_p }}
+                    <input type="submit" value="OK" />
+                </form>
+            {% endif %}
+        {% endif %}
+    {% endblock %}      
 </article>
