--- a/kii/stream/templates/default/stream/streamitem/list_item.html
+++ b/kii/stream/templates/default/stream/streamitem/list_item.html
@@ -44,7 +44,7 @@
                 {% endfor %}
             </ul>
             {% if item.discussion_open %}
-                <p>{% trans "comment.publish" %}</h3>
+                <h3>{% trans "comment.publish" %}</h3>
                 <form action="{{ item.reverse_comment_create }}" class="{{ form.Meta.model.class_name }} {{ action }}" method="POST">
                     {% csrf_token %}
                     {{ comment_form.as_p }}
