Removed topbar for anonymous users

--- a/kii/glue/templates/default/glue/base.html
+++ b/kii/glue/templates/default/glue/base.html
@@ -25,7 +25,9 @@
                 {% endif %}
             {% endblock %}
             {% block header %}
-                {% include "glue/main_navigation.html" %}
+                {% if request.user.is_authenticated %}
+                    {% include "glue/main_navigation.html" %}
+                {% endif %}
             {% endblock %}
             {% block main_content %}{% endblock %}
         </div>
